# CapCalc

./: README.md
CapCalc_Console/: CMakeLists.txt  main.cpp  version.h
